--- a/package.json
+++ b/package.json
@@ -14,5 +14,7 @@
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
   },
-  "cordovaPlugins": []
+  "cordovaPlugins": [
+    "./engine/cordova-crosswalk-engine-c0.6.2"
+  ]
 }
